stats no longer mess up on mobile

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -353,11 +353,15 @@ textarea, input { outline: none; }
   text-align: center;
 }
 
-.big-stat{
+.big-stats{
   font-size:78px;
   font-weight:500;
   text-align: center;
-  clear:both;
+
+  div{
+    min-height:105px;
+    text-align: center;
+  }
 
   .percent{
     font-size:52px;
@@ -367,4 +371,6 @@ textarea, input { outline: none; }
 .stat-label{
   margin-top:30px;
   text-align: center;
+  font-size: $type-base;
+  font-weight: 400;
 }
